# rag_playground

./: .gitignore  README.md  main.py  pyproject.toml
components/: base_classes.py  datastore_chroma.py
components/datastores/: datastore_chroma.py
components/embedders/: embedder_chroma.py
components/generators/: generator_context_response.py
components/llms/: llm_openai.py
components/rag_strategy/: naive_rag_strategy.py  rag_strategy_naive.py  simple_rag_strategy.py
examples/: example_naive_rag.py
