[tool.poetry]
name = "rag-playground"
version = "0.1.0"
description = ""
authors = ["Dhruvajyoti Sarma <onlinedhruva71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.5.4"
openai = "^1.35.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
